--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -2,6 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/navigation_library"
+        android:enabled="true"
+        android:icon="@drawable/selector_bottom_navigation_square"
+        android:title="图书馆" />
+    <item
         android:id="@+id/navigation_square"
         android:enabled="true"
         android:icon="@drawable/selector_bottom_navigation_square"
