--- a/app/src/main/res/layout/libabry_more.xml
+++ b/app/src/main/res/layout/libabry_more.xml
@@ -1,19 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@color/white"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:text="大家都在读"
+        android:text="更多好文"
         android:textColor="#1E1D1D"
         android:textSize="18sp"
         android:textStyle="normal"
-        android:id="@+id/recommend_text"
+        android:id="@+id/more_text"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"/>
-
-
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/more_RecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/more_text"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
