--- a/app/src/main/res/layout/libary_topbar.xml
+++ b/app/src/main/res/layout/libary_topbar.xml
@@ -9,6 +9,7 @@
     app:cardCornerRadius="20dp">
 
     <RelativeLayout
+        android:id="@+id/topbar_search"
         android:layout_width="match_parent"
         android:layout_height="26dp"
         android:layout_margin="10dp"
