feat: my model feat dev

--- a/app/src/main/res/drawable/selector_bottom_navigation_me.xml
+++ b/app/src/main/res/drawable/selector_bottom_navigation_me.xml
@@ -1,5 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@drawable/mine1" android:state_checked="true" />
-    <item android:drawable="@drawable/mine" android:state_checked="false" />
-</selector>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="200dp"
+    android:height="200dp"
+    android:viewportWidth="1024"
+    android:viewportHeight="1024">
+    <path
+        android:pathData="M678.4,537.6c76.8,-51.2 128,-140.8 128,-243.2 0,-162.1 -132.3,-294.4 -294.4,-294.4s-294.4,132.3 -294.4,294.4c0,102.4 51.2,192 128,243.2 -179.2,68.3 -302.9,238.9 -302.9,439.5 0,25.6 17.1,42.7 42.7,42.7s42.7,-17.1 42.7,-42.7c0,-209.1 174.9,-384 384,-384s384,170.7 384,384c0,25.6 17.1,42.7 42.7,42.7s42.7,-21.3 42.7,-42.7c0,-200.5 -128,-371.2 -302.9,-439.5zM302.9,298.7c0,-115.2 93.9,-209.1 209.1,-209.1s209.1,93.9 209.1,209.1 -93.9,209.1 -209.1,209.1 -209.1,-93.9 -209.1,-209.1z"
+        android:fillColor="#666666"/>
+</vector>
