--- a/app/src/main/res/drawable/selector_bottom_navigation_shelf.xml
+++ b/app/src/main/res/drawable/selector_bottom_navigation_shelf.xml
@@ -1,5 +1,15 @@
-<?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@drawable/shelf1" android:state_checked="true" />
-    <item android:drawable="@drawable/shelf" android:state_checked="false" />
-</selector>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="200dp"
+    android:height="200dp"
+    android:viewportWidth="1024"
+    android:viewportHeight="1024">
+    <path
+        android:pathData="M900.8,143.6a34.1,34.1 0,0 1,43.7 52.4l-4.4,3.7a174,174 0,0 0,-25 27.7C897.7,251.5 887.5,278.3 887.5,307.2c0,28.9 10.2,55.7 27.6,79.9 6.3,8.6 13,16.2 19.6,22.7l3,2.8c1.8,1.7 3.2,2.9 4.1,3.6l0.6,0.5a34.1,34.1 0,0 1,-41.5 54.2c-11,-8.4 -26.1,-23.1 -41,-43.8C834.6,392.1 819.2,351.9 819.2,307.2c0,-44.7 15.4,-84.9 40.6,-119.8 15,-20.7 30,-35.4 41,-43.8zM75.3,559.5a34.1,34.1 0,0 1,47.9 -6.3c11,8.4 26.1,23.1 41,43.8C189.4,631.9 204.8,672.1 204.8,716.8c0,44.7 -15.4,84.9 -40.6,119.8 -15,20.7 -30,35.4 -41,43.8a34.1,34.1 0,0 1,-43.7 -52.4l4.4,-3.7c1.4,-1.2 3.2,-2.9 5.4,-4.9 6.7,-6.5 13.3,-14.1 19.6,-22.7C126.3,772.5 136.5,745.7 136.5,716.8c0,-28.9 -10.2,-55.7 -27.6,-79.8a174,174 0,0 0,-19.6 -22.7l-4.2,-4a77.9,77.9 0,0 0,-2.8 -2.4l-0.6,-0.4a34.1,34.1 0,0 1,-6.3 -47.9z"
+        android:fillColor="#444444"/>
+    <path
+        android:pathData="M921.6,136.5a34.1,34.1 0,0 1,2.6 68.2L921.6,204.8H238.9a102.4,102.4 0,0 0,-3.8 204.7L238.9,409.6h682.7a34.1,34.1 0,0 1,2.6 68.2L921.6,477.9H238.9C144.7,477.9 68.3,401.5 68.3,307.2c0,-92.7 73.8,-168.1 165.9,-170.6L238.9,136.5h682.7zM785.1,546.1c94.3,0 170.7,76.4 170.7,170.7 0,92.7 -73.8,168.1 -165.9,170.6L785.1,887.5H102.4a34.1,34.1 0,0 1,-2.6 -68.2L102.4,819.2h682.7a102.4,102.4 0,0 0,3.8 -204.7L785.1,614.4H102.4a34.1,34.1 0,0 1,-2.6 -68.2L102.4,546.1h682.7z"
+        android:fillColor="#444444"/>
+    <path
+        android:pathData="M375.5,256v221.9a34.1,34.1 0,1 1,-68.3 0V256h68.3z"
+        android:fillColor="#00B386"/>
+</vector>
