--- a/app/src/main/res/drawable/selector_bottom_navigation_square.xml
+++ b/app/src/main/res/drawable/selector_bottom_navigation_square.xml
@@ -1,5 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@drawable/find1" android:state_checked="true" />
-    <item android:drawable="@drawable/find" android:state_checked="false" />
-</selector>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="200dp"
+    android:height="200dp"
+    android:viewportWidth="1024"
+    android:viewportHeight="1024">
+    <path
+        android:pathData="M896,149.3H646.2a179.4,179.4 0,0 0,-68.9 13.9,187.3 187.3,0 0,0 -30.1,16.4 157,157 0,0 0,-26 21.3c-3.2,3.2 -6.2,6.4 -9.2,9.8 -3,-3.4 -6,-6.6 -9.2,-9.8a157,157 0,0 0,-26 -21.3,187.3 187.3,0 0,0 -30.1,-16.4A179.4,179.4 0,0 0,377.8 149.3H128a85.3,85.3 0,0 0,-85.3 85.3v129.1a42.7,42.7 0,0 0,85.3 0V234.7h249.8a91.3,91.3 0,0 1,18.6 1.9,83.2 83.2,0 0,1 17.1,5.3 91.3,91.3 0,0 1,15.6 8.3,93 93,0 0,1 24.7,24.7 91.3,91.3 0,0 1,8.3 15.6,83.2 83.2,0 0,1 5.3,17.1 91.3,91.3 0,0 1,1.9 18.6V469.3a42.7,42.7 0,0 0,85.3 0v-143.1a91.3,91.3 0,0 1,1.9 -18.6,83.2 83.2,0 0,1 5.3,-17.1 91.3,91.3 0,0 1,8.3 -15.6,102.2 102.2,0 0,1 24.7,-24.7 91.3,91.3 0,0 1,15.6 -8.3,83.2 83.2,0 0,1 17.1,-5.3 91.3,91.3 0,0 1,18.6 -1.9H896v510.7H597.3a42.7,42.7 0,0 0,-34.1 16.9,61.4 61.4,0 0,1 -4.7,5.8 58.2,58.2 0,0 1,-5.3 4.9,39.7 39.7,0 0,1 -6,4.5 36.1,36.1 0,0 1,-6.2 3.6,36.9 36.9,0 0,1 -6.6,3l-7,2.3 -7.3,1.3a61.7,61.7 0,0 1,-15.4 0l-7.3,-1.3 -6.8,-1.1 -6.6,-2.8a112.9,112.9 0,0 1,-12.2 -8.1l-5.3,-5.1a61.4,61.4 0,0 1,-4.7 -5.8A42.7,42.7 0,0 0,426.7 746.7H128v-192a42.7,42.7 0,0 0,-85.3 0v192a85.3,85.3 0,0 0,85.3 85.3h280.1l8.1,7.5a122.2,122.2 0,0 0,13.4 10,128 128,0 0,0 14.7,8.7c4.9,2.6 10.2,4.9 15.6,7s10.9,3.6 16.6,5.1a122.9,122.9 0,0 0,17.3 3.2A169,169 0,0 0,512 874.7a161.7,161.7 0,0 0,17.9 0,120.3 120.3,0 0,0 17.5,-3.2q8.5,-2.3 16.6,-5.1c5.3,-2.1 10.7,-4.5 15.8,-7a145.5,145.5 0,0 0,14.5 -8.7,122.2 122.2,0 0,0 13.4,-10l8.1,-7.5H896a85.3,85.3 0,0 0,85.3 -85.3V234.7a85.3,85.3 0,0 0,-85.3 -85.3z"
+        android:fillColor="#333333"/>
+</vector>
