--- a/app/src/main/res/layout/libabry_recommend.xml
+++ b/app/src/main/res/layout/libabry_recommend.xml
@@ -83,9 +83,10 @@
         android:layout_height="wrap_content"
         android:id="@+id/recommend_change"
         android:text="换一批"
-        android:textColor="#1E1D1D"
+        android:textColor="#4A4242"
         android:textSize="18sp"
         android:textStyle="normal"
+        android:backgroundTint="#E2F4F2F2"
         app:layout_constraintTop_toBottomOf="@id/recommend_5"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="30dp"
