--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -2,22 +2,17 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/navigation_library"
+        android:id="@+id/navigation_libraryFragment"
         android:enabled="true"
         android:icon="@drawable/selector_bottom_navigation_square"
         android:title="图书馆" />
     <item
-        android:id="@+id/navigation_square"
-        android:enabled="true"
-        android:icon="@drawable/selector_bottom_navigation_square"
-        android:title="书城" />
-    <item
-        android:id="@+id/navigation_shelf"
+        android:id="@+id/navigation_shelfFragment"
         android:enabled="true"
         android:icon="@drawable/selector_bottom_navigation_shelf"
         android:title="书架" />
     <item
-        android:id="@+id/navigation_me"
+        android:id="@+id/navigation_meFragment"
         android:enabled="true"
         android:icon="@drawable/selector_bottom_navigation_me"
         android:title="我" />
