--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -93,7 +93,7 @@
     <color name="c_00000000">#00000000</color>
     <color name="c_353535">#353535</color>
 
-    <color name="main_color">#EEEEEE</color>
+    <color name="main_color">#009688</color>
     <color name="trans">@color/c_00000000</color>
     <color name="main_text_color">@color/c_353535</color>
 
