--- a/app/src/main/res/layout/fragment_my.xml
+++ b/app/src/main/res/layout/fragment_my.xml
@@ -163,6 +163,7 @@
     </LinearLayout>
 
     <FrameLayout
+        android:background="@color/white"
         android:id="@+id/me_chartContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
